# pytest-rs

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md  THIRD-PARTY-NOTICES.md  compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
bench/: README.md  bench.py  flame.sh  suites.sh
conformance/: RESULTS.md  plugin_smoke.py  runner.py  suites.toml  typing_check.py
conformance/expected/: anyio.toml  click.toml  jinja.toml  marshmallow.toml  pytest-asyncio.toml  pytest-bdd.toml  pytest-benchmark.toml  pytest-cov.toml  pytest-django.toml  pytest-env.toml  pytest-icdiff.toml  pytest-instafail.toml  pytest-metadata.toml  pytest-mock.toml  pytest-mypy.toml  pytest-order.toml  pytest-randomly.toml  pytest-repeat.toml  pytest-rerunfailures.toml  pytest-ruff.toml  pytest-snapshot.toml  pytest-socket.toml  pytest-split.toml  pytest-subtests.toml  pytest-timeout.toml  pytest-xdist.toml  pytest.toml  rich.toml
conformance/plugin-smoke/: test_fixture_plugins.py  test_outcomes.py  test_snapshot_parallel.py
conformance/scoreboard/darwin/: anyio.json  attrs.json  click.json  fastapi.json  httpx.json  httpx2.json  jinja.json  more-itertools.json  packaging.json  pandas.json  pytest-asyncio.json  pytest-bdd.json  pytest-benchmark.json  pytest-cov.json  pytest-django.json  pytest-env.json  pytest-icdiff.json  pytest-instafail.json  pytest-metadata.json  pytest-mock.json  pytest-mypy.json  pytest-order.json  pytest-randomly.json  pytest-repeat.json  pytest-rerunfailures.json  pytest-ruff.json  pytest-snapshot.json  pytest-socket.json  pytest-split.json  pytest-subtests.json  pytest-timeout.json  pytest-xdist.json  pytest.json  scikit-learn-1.json  scikit-learn-2.json  scikit-learn-3.json  scikit-learn.json  starlette.json
conformance/scoreboard/linux/: anyio.json  attrs.json  click.json  fastapi.json  httpx.json  httpx2.json  jinja.json  marshmallow.json  more-itertools.json  networkx.json  packaging.json  rich.json  (+33 more)
conformance/typing/: asyncio_and_mock.py  core.py
crates/pytest-rs/: Cargo.toml
crates/pytest-rs-anyio/: Cargo.toml
crates/pytest-rs-anyio/py/: helper.py
crates/pytest-rs-anyio/src/: lib.rs
crates/pytest-rs-asyncio/: Cargo.toml
crates/pytest-rs-asyncio/py/: helper.py  pytest_asyncio_shim.py
crates/pytest-rs-asyncio/py/pytest_asyncio/: __init__.py  plugin.py
crates/pytest-rs-asyncio/src/: lib.rs
crates/pytest-rs-benchmark/: Cargo.toml
crates/pytest-rs-benchmark/py/: helper.py
crates/pytest-rs-benchmark/src/: fixture.rs  lib.rs  report.rs  stats.rs
crates/pytest-rs-core/: Cargo.toml  build.rs
crates/pytest-rs-core/py/_pytest/: __init__.py  _stub.py  cacheprovider.py  capture.py  compat.py  debugging.py  deprecated.py  doctest.py  faulthandler.py  fixtures.py  hookspec.py  junitxml.py  logging.py  main.py  monkeypatch.py  nodes.py  outcomes.py  pastebin.py  pathlib.py  pytester.py  pytester_assertions.py  python.py  python_api.py  raises.py  recwarn.py  reports.py  runner.py  scope.py  skipping.py  stash.py  stepwise.py  subtests.py  terminal.py  timing.py  tmpdir.py  unittest.py  warning_types.py
crates/pytest-rs-core/py/_pytest/_code/: __init__.py  code.py  source.py
crates/pytest-rs-core/py/_pytest/_io/: __init__.py  terminalwriter.py
crates/pytest-rs-core/py/_pytest/assertion/: __init__.py  rewrite.py  truncate.py  util.py
crates/pytest-rs-core/py/_pytest/config/: __init__.py  argparsing.py  exceptions.py  findpaths.py
crates/pytest-rs-core/py/_pytest/mark/: __init__.py  expression.py  structures.py
crates/pytest-rs-core/py/pytest/: __init__.py  _approx.py  _cache.py  _capture.py  _config_trace.py  _ctx.py  _debugging.py  _dist.py  _doctest_namespace.py  _expression.py  _faulthandler.py  _fixturemanager.py  _fixtures.py  _hook_relay_plugin.py  _idmaker.py  _junitxml.py  _logging.py  _marks.py  _metafunc.py  _monkeypatch.py  _node.py  _outcomes.py  _parser.py  _pluginmanager.py  _pycollect.py  _pytester.py  _pytester_config.py  _pytester_linematcher.py  _pytester_relay.py  _raises.py  _raises_group.py  _reporter.py  _rewrite.py  _setupshow.py  _showfixtures.py  _skipping.py  _stash.py  _subtests.py  _tb.py  _threadexception.py  (+9 more)
crates/pytest-rs-core/py/xdist/: __init__.py
crates/pytest-rs-core/src/: cache.rs  collect.rs  config.rs  dist.rs  engine.rs  fixture.rs  hooks.rs  ipc.rs  lib.rs  looponfail.rs  markexpr.rs  pastebin.rs  python.rs  report.rs  request.rs  runner.rs  session.rs  tw.rs  worker.rs
crates/pytest-rs-core/src/config/: accessors.rs  cli.rs  ini.rs  mod.rs  options.rs  types.rs
crates/pytest-rs-core/src/engine/: collect.rs  hooks.rs  inprocess.rs  lifecycle.rs  mod.rs  nested.rs  reporting.rs  selection.rs  session.rs  terminal.rs
crates/pytest-rs-core/src/engine/collect/: collection.rs  mod.rs  pipeline.rs  plugins.rs  reorder.rs
crates/pytest-rs-core/src/engine/terminal/: display.rs  mod.rs  results.rs  summary.rs
crates/pytest-rs-core/src/python/: bootstrap.rs  collecting.rs  errors.rs  fixtures.rs  mod.rs  proxies.rs  reporter.rs  services.rs
crates/pytest-rs-core/src/python/collecting/: doctest.rs  hooks.rs  introspect.rs  items.rs  mod.rs  parametrize.rs  utils.rs
crates/pytest-rs-core/src/runner/: fixtures.rs  hooks.rs  item.rs  marks.rs  mod.rs  progress.rs  protocol.rs  teardown.rs
crates/pytest-rs-core/src/runner/item/: body.rs  mod.rs  setup.rs
crates/pytest-rs-cov/: Cargo.toml
crates/pytest-rs-cov/py/pytest_cov/: __init__.py  _child.py  plugin.py
crates/pytest-rs-cov/src/: analysis.rs  collector.rs  files.rs  lib.rs  report.rs
crates/pytest-rs-mock/: Cargo.toml
crates/pytest-rs-mock/py/pytest_mock/: _util.py  plugin.py
crates/pytest-rs-mock/src/: lib.rs
crates/pytest-rs-split/: Cargo.toml
crates/pytest-rs-split/src/: algorithms.rs  lib.rs
crates/pytest-rs/src/: launcher.rs  main.rs
crates/pytest-rs/tests/: integration.rs
docker/: dev.Dockerfile
docs/: DESIGN.md
examples/basic/: README.md  pyproject.toml
sample/: pyproject.toml
sample/src/: code.py
sample/tests/: test_code.py
scripts/: smoke.sh
tests/: test_sys_path_prepend.py
(+7 files in other folders)
