[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.96"
repository = "http://github.com/Yasu-umi/pytest-rs"
authors = ["Yasu-umi <yasu.umi.19910101@gmail.com>"]
license = "MIT"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
dbg_macro = "warn"
todo = "warn"

[workspace.dependencies]
pytest-rs-core = { path = "crates/pytest-rs-core" }
pytest-rs-asyncio = { path = "crates/pytest-rs-asyncio" }
pytest-rs-mock = { path = "crates/pytest-rs-mock" }

pyo3 = { version = "0.28.3" }
clap = { version = "4.6", features = ["derive", "string"] }
glob = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
thiserror = "2"

ruff_python_parser = { git = "https://github.com/astral-sh/ruff", tag = "0.15.16" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff", tag = "0.15.16" }
