[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.96"
repository = "http://github.com/Yasu-umi/pytest-rs"
authors = ["Yasu-umi <yasu.umi.19910101@gmail.com>"]
license = "MIT"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
dbg_macro = "warn"
todo = "warn"

[workspace.dependencies]
pytest-rs-core = { path = "crates/pytest-rs-core" }
pytest-rs-asyncio = { path = "crates/pytest-rs-asyncio" }
pytest-rs-anyio = { path = "crates/pytest-rs-anyio" }
pytest-rs-mock = { path = "crates/pytest-rs-mock" }
pytest-rs-cov = { path = "crates/pytest-rs-cov" }
pytest-rs-split = { path = "crates/pytest-rs-split" }
pytest-rs-benchmark = { path = "crates/pytest-rs-benchmark" }

pyo3 = { version = "0.28.3" }
clap = { version = "4.6", features = ["derive", "string"] }
glob = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
thiserror = "2"
regex = "1"
libc = "0.2"

ruff_python_parser = { git = "https://github.com/astral-sh/ruff", tag = "0.15.16" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff", tag = "0.15.16" }
ruff_source_file = { git = "https://github.com/astral-sh/ruff", tag = "0.15.16" }
ruff_text_size = { git = "https://github.com/astral-sh/ruff", tag = "0.15.16" }

# Distribution wheels: smaller binaries at some build-time cost.
[profile.release]
strip = true
lto = "thin"
