[project]
name = "pytest-rs"
version = "0.0.1"
description = "A fast, drop-in compatible pytest runner written in Rust"
requires-python = ">=3.13"

[tool.uv]
package = false

[dependency-groups]
dev = [
    "ruff>=0.15",
    "mypy>=1.15",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.13"
files = ["crates/**/py/**/*.py", "conformance/runner.py"]
