[project]
name = "pytest-rs"
version = "0.0.8"
description = "A fast, drop-in compatible pytest runner written in Rust"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE", "THIRD-PARTY-NOTICES.md"]
authors = [{ name = "Yasu-umi" }]
keywords = ["pytest", "testing", "rust", "test-runner"]
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Testing",
]

[project.urls]
Homepage = "https://github.com/Yasu-umi/pytest-rs"
Source = "https://github.com/Yasu-umi/pytest-rs"
Tracker = "https://github.com/Yasu-umi/pytest-rs/issues"

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "bin"
manifest-path = "crates/pytest-rs/Cargo.toml"

[tool.uv]
# Rebuild the wheel when Rust sources or the embedded Python shims change,
# not only when pyproject.toml does (uv's default cache key).
cache-keys = [
    { file = "pyproject.toml" },
    { file = "Cargo.toml" },
    { file = "crates/**/Cargo.toml" },
    { file = "crates/**/*.rs" },
    { file = "crates/**/py/**/*.py" },
]

[dependency-groups]
dev = [
    "ruff>=0.15",
    "mypy>=1.15",
]

[tool.ruff]
target-version = "py313"
line-length = 100
# Upstream test suites checked out under conformance/suites are lint targets
# of their own repos, not ours.
extend-exclude = ["conformance/suites"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "E501", # line length is the formatter's job; ports keep upstream's long literals
    # bugbear rules upstream pytest ignores too — the py/ tree is a port of it
    "B007",
    "B011",
    "B028",
    "B905",
]

[tool.ruff.lint.per-file-ignores]
# Vendored pytest-mock plugin: keep upstream's idioms.
"crates/pytest-rs-mock/py/pytest_mock/*" = ["UP", "E402"]
# Ported upstream pytest code: keep its pre-PEP695 generics.
"crates/pytest-rs-core/py/pytest/_raises_group.py" = ["UP"]

[tool.mypy]
python_version = "3.13"
# The plugin py/ trees reuse top-level module names (helper.py), which one
# mypy invocation cannot hold together; CI checks them with separate runs.
files = ["crates/pytest-rs-core/py", "conformance/runner.py"]
# The bundled shims import each other across crate py/ roots resolved only
# at runtime (sys.path assembled by the engine).
ignore_missing_imports = true
