[package]
name = "pytest-rs-asyncio"
version = "0.0.3"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = "../../README.md"

[dependencies]
pytest-rs-core = { workspace = true }

[lints]
workspace = true
