[package]
name = "pytest-rs-core"
version = "0.0.1"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = "../../README.md"

[dependencies]
pyo3 = { workspace = true, features = ["auto-initialize"] }
clap = { workspace = true }
glob = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
ruff_python_parser = { workspace = true }
ruff_python_ast = { workspace = true }

[lints]
workspace = true
