[package]
name = "pytest-rs-core"
version = "0.0.7"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = "../../README.md"

[features]
# -n N multi-process distribution (pytest-xdist equivalent).
xdist = []

[dependencies]
pyo3 = { workspace = true }
clap = { workspace = true }
glob = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
ruff_python_parser = { workspace = true }
ruff_python_ast = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[lints]
workspace = true
