[package]
name = "pytest-rs-mock"
version = "0.0.8"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = "../../README.md"

[dependencies]
pytest-rs-core = { workspace = true }

[lints]
workspace = true
