[package]
name = "pytest-rs"
version = "0.0.1"
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = "../../README.md"

# The engine links libpython; the `pytest-rs` command users invoke is a tiny
# launcher that resolves the environment's libpython dir and execs the engine.
[[bin]]
name = "pytest-rs-bin"
path = "src/main.rs"

[[bin]]
name = "pytest-rs"
path = "src/launcher.rs"

[features]
default = ["asyncio", "mock", "cov", "split", "benchmark", "xdist"]
asyncio = ["dep:pytest-rs-asyncio"]
xdist = ["pytest-rs-core/xdist"]
mock = ["dep:pytest-rs-mock"]
cov = ["dep:pytest-rs-cov"]
split = ["dep:pytest-rs-split"]
benchmark = ["dep:pytest-rs-benchmark"]

[dependencies]
pytest-rs-core = { workspace = true }
pytest-rs-asyncio = { workspace = true, optional = true }
pytest-rs-mock = { workspace = true, optional = true }
pytest-rs-cov = { workspace = true, optional = true }
pytest-rs-split = { workspace = true, optional = true }
pytest-rs-benchmark = { workspace = true, optional = true }

[lints]
workspace = true
